# spec-kit-demo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Phase3验收指南.md  Phase4验收指南.md  Phase6实现总结.txt  Phase6验收指南.md  Phase8实现总结.md  Phase8验收指南.md  Phase9实现总结.md  Phase9验收指南.md  README.md  TESTING.md  UI_RENDERING_FIX.md  main.py  pyproject.toml  pytest.ini  q  test_fixes.py  test_keyboard_shortcuts.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
demos/: ai_demo.py
docs/: AI_BATTLE_MODE验收指南.md  ai_api.md  constitution_validation.md  success_criteria_verification.md
openspec/: project.md
openspec/changes/fix-integration-test-errors/: proposal.md  tasks.md
openspec/changes/refactor-src-layout/: proposal.md  tasks.md
openspec/specs/cleanup-redundant-examples/: spec.md
openspec/specs/game-mode/: spec.md
openspec/specs/game-mode-selector/: spec.md
openspec/specs/logger-config/: spec.md
openspec/specs/main-refactor/: spec.md
openspec/specs/print-replacement/: spec.md
openspec/specs/test-fixes/: spec.md
openspec/specs/ui-window-manager/: spec.md
openspec/specs/unit-test-fixes/: spec.md
specs/001-blokus-multiplayer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-blokus-multiplayer/checklists/: requirements.md
specs/001-blokus-multiplayer/contracts/: board-interface.yaml  piece-interface.yaml  rules-interface.yaml
specs/001-fix-piece-placement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-piece-placement/checklists/: requirements.md
specs/001-fix-piece-placement/contracts/: board-click.md  error-handling.md  piece-selection.md
specs/002-ai-battle-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-battle-mode/checklists/: requirements.md
specs/002-ai-battle-mode/contracts/: ai-player.contract  ai-strategy.contract  game-mode.contract  turn-controller.contract
specs/003-fix-ai-player/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-fix-ai-player/checklists/: requirements.md
specs/003-fix-ai-player/contracts/: ai-player.md  ai-strategy.md  integration.md  move.md
src/: PHASE_3_COMPLETION_SUMMARY.md  QUICK_VALIDATION_GUIDE.md  main.py
src/blokus_game/: __init__.py  main.py  main.py.backup
src/blokus_game/config/: game_config.py  pieces.py  (+1 more)
src/config/: game_config.py  pieces.py
src/game/: ai_game_initializer.py  end_game_detector.py  error_handler.py  game_loop.py  game_setup.py  placement_handler.py  rules.py  score_history.py  scoring.py  turn_manager.py  turn_validator.py  winner_determiner.py
src/models/: ai_config.py  ai_player.py  board.py  game_mode.py  game_state.py  game_stats.py  piece.py  player.py  turn_controller.py
src/services/: ai_strategy.py
src/ui/: ai_difficulty_indicator.py  ai_thinking_indicator.py  board_click_handler.py  board_renderer.py  current_player_indicator.py  error_display.py  game_mode_selector.py  game_results.py  help_tooltips.py  keyboard_shortcuts.py  piece_display.py  piece_inventory.py  piece_selector.py  placement_preview.py  restart_button.py  rule_enforcement_integration_example.py  score_breakdown.py  scoreboard.py  setup_window.py  skip_turn_button.py  spectator_mode_indicator.py  state_sync.py  test_keyboard_shortcuts.py  turn_management_integration_example.py  ui_integration_example.py
tests/: conftest.py
tests/contract/: test_adjacency_rule.py  test_board_bounds.py  test_board_init.py  test_final_scoring.py  test_first_move_rule.py  test_game_end.py  test_move_validation.py  test_overlap_detection.py  test_piece_flip.py  test_piece_rotation.py  test_player_creation.py  test_score_calculation.py  test_skip_turn.py  test_state_display.py  test_turn_sequence.py
tests/integration/: test_ai_basic.py  test_ai_calculate_move_integration.py  test_ai_flip_support.py  test_ai_independence.py  test_ai_stress.py  test_all_modes.py  test_complete_end_game_flow.py  test_complete_game_flow.py  test_complete_placement_flow.py  test_complete_score_system.py  test_complete_setup_flow.py  test_complete_state_visibility.py  test_difficulty.py  test_easy_ai.py  test_end_game_flow.py  test_game_performance.py  test_game_setup.py  test_hard_ai.py  test_medium_ai.py  test_phase8_rule_enforcement_complete.py  test_piece_placement.py  test_piece_placement_bug_regression.py  test_rule_enforcement.py  test_score_updates.py  test_single_ai.py  test_spectate.py  test_three_ai.py  test_turn_flow.py  test_ui_updates.py  validate_phase5.py
tests/unit/: test_ai_edge_cases.py  test_ai_pass_turn_inventory.py  test_ai_performance.py  test_ai_player.py  test_ai_strategy.py  test_ai_strategy_flip.py  test_board.py  test_game_mode.py  test_game_mode_selector.py  test_game_state.py  test_game_stats.py  test_move_flip.py  test_piece.py  test_placement_handler_update.py  test_player.py  test_rules.py  test_scoring.py  test_turn_controller.py
(+100 files in other folders)
